// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIssueDetailsModalTest render while closed 1`] = `
<FileIssueDetailsModal
  fileIssueDetailsHandler={
    proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "_htmlElementUtils": undefined,
      "onLayoutDidMount": [Function],
    }
  }
  isOpen={false}
  onDismiss={null}
  onOpenSettings={null}
/>
`;

exports[`FileIssueDetailsModalTest render while open 1`] = `
<FileIssueDetailsModal
  fileIssueDetailsHandler={
    proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "_htmlElementUtils": undefined,
      "onLayoutDidMount": [Function],
    }
  }
  isOpen={true}
  onDismiss={null}
  onOpenSettings={null}
/>
`;
